{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 85,
  "lineage": "bb830335-0261-9cf1-34e6-ac7b05b91faa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw_gdtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:703671922793:internet-gateway/igw-00a60b44a89af54f5",
            "id": "igw-00a60b44a89af54f5",
            "owner_id": "703671922793",
            "tags": {
              "Name": "MyInternetGatewaygdtc"
            },
            "tags_all": {
              "Name": "MyInternetGatewaygdtc"
            },
            "vpc_id": "vpc-0a5555631808984b0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_gdtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_gdtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:703671922793:route-table/rtb-0a8a25c04db280980",
            "id": "rtb-0a8a25c04db280980",
            "owner_id": "703671922793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a60b44a89af54f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTablegdtc"
            },
            "tags_all": {
              "Name": "PublicRouteTablegdtc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5555631808984b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw_gdtc",
            "aws_vpc.my_vpc_gdtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003f007ca1bca520d",
            "route_table_id": "rtb-0a8a25c04db280980",
            "subnet_id": "subnet-092691d2d817a9603"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw_gdtc",
            "aws_route_table.public_rt_gdtc",
            "aws_subnet.public_subnet_gdtc",
            "aws_vpc.my_vpc_gdtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_gdtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:703671922793:security-group/sg-0b36285600de25693",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b36285600de25693",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250305122924023100000001",
            "name_prefix": "terraform-",
            "owner_id": "703671922793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySecurityGroupgdtc"
            },
            "tags_all": {
              "Name": "MySecurityGroupgdtc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5555631808984b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_gdtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_gdtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:703671922793:subnet/subnet-0d37ea4327f519073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d37ea4327f519073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671922793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetgdtc"
            },
            "tags_all": {
              "Name": "PrivateSubnetgdtc"
            },
            "vpc_id": "vpc-0a5555631808984b0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_gdtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_gdtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:703671922793:subnet/subnet-092691d2d817a9603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092691d2d817a9603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671922793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetgdtc"
            },
            "tags_all": {
              "Name": "PublicSubnetgdtc"
            },
            "vpc_id": "vpc-0a5555631808984b0"
          },
          "dependencies": [
            "aws_vpc.my_vpc_gdtc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_gdtc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:703671922793:vpc/vpc-0a5555631808984b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c651801ea30504a5",
            "default_route_table_id": "rtb-011553cc298219aa8",
            "default_security_group_id": "sg-0b76a9b51669a7d60",
            "dhcp_options_id": "dopt-02295427b5c8f4d9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5555631808984b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011553cc298219aa8",
            "owner_id": "703671922793",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}